@@ -181,7 +181,7 @@ shell.setCompletionFunction( "rom/programs/move", completeEitherEither )
 shell.setCompletionFunction( "rom/programs/redstone", completeRedstone )
 shell.setCompletionFunction( "rom/programs/rename", completeEitherEither )
 shell.setCompletionFunction( "rom/programs/shell", completeProgram )
-shell.setCompletionFunction( "rom/programs/type", completEither )
+shell.setCompletionFunction( "rom/programs/type", completeEither )
 shell.setCompletionFunction( "rom/programs/advanced/bg", completeProgram )
 shell.setCompletionFunction( "rom/programs/advanced/fg", completeProgram )
 shell.setCompletionFunction( "rom/programs/fun/dj", completeDJ )
